--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -410,12 +410,12 @@
 "new_password" = "Новый пароль";
 "repeat_password" = "Повторите пароль";
 
-"avatars_style" = "Отображение аватар";
+"avatars_style" = "Отображение аватаров";
 "style" = "Стиль";
 
-"default" = "По умолчанию";
-"cut" = "Обрезка";
-"round_avatars" = "Круглый аватар";
+"default" = "Произвольные (по умолчанию)";
+"cut" = "Квадратные";
+"round_avatars" = "Круглые";
 
 "apply_style_for_this_device" = "Применить стиль только для этого устройства";
 
