--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -364,9 +364,9 @@
 "avatars_style" = "Отображеніе портрета";
 "style" = "Стиль";
 
-"default" = "По умолчанію";
-"cut" = "Обрѣзка";
-"round_avatars" = "Круглый портретъ";
+"default" = "Произвольный (по умолчанію)";
+"cut" = "Квадратные​";
+"round_avatars" = "Круглые";
 
 "search_for_groups" = "Поискъ обществъ";
 "search_for_people" = "Поискъ людей";
