Locales: Fix "default" string and separate it Whoops, "default" was also used in other places. Now I reverted it back and added new "arbitrary_avatars"

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -393,7 +393,9 @@
 "avatars_style" = "Avatar style";
 "style" = "Style";
 
-"default" = "Arbitrary (default)";
+"default" = "default";
+
+"arbitrary_avatars" = "Arbitrary";
 "cut" = "Square";
 "round_avatars" = "Round";
 
