--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -413,7 +413,9 @@
 "avatars_style" = "Отображение аватаров";
 "style" = "Стиль";
 
-"default" = "Произвольные (по умолчанию)";
+"default" = "по умолчанию";
+
+"arbitrary_avatars" = "Произвольные";
 "cut" = "Квадратные";
 "round_avatars" = "Круглые";
 
