--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -364,7 +364,9 @@
 "avatars_style" = "Отображеніе портрета";
 "style" = "Стиль";
 
-"default" = "Произвольный (по умолчанію)";
+"default" = "по умолчанію";
+
+"arbitrary_avatars" = "Произвольные​";
 "cut" = "Квадратные​";
 "round_avatars" = "Круглые";
 
